--- a/product-services/build.gradle
+++ b/product-services/build.gradle
@@ -33,6 +33,10 @@ dependencies {
 	runtimeOnly 'org.flywaydb:flyway-database-postgresql'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	testImplementation 'org.testcontainers:junit-jupiter:1.19.7'
+	testImplementation 'org.testcontainers:postgresql:1.19.7'
+
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
